--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </td>
     </tr>
     <tr>
-        <td colspan=3>©Igor Ukraintsev, NURE</td>
+        <td colspan=3>©Copyright 2021 Igor Ukraintsev. All rights reserved.</td>
     </tr>
         </table>
     </body>
