--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             <td><p>Получение <b>ортофосфорной</b> кислоты: <br>P<sub>2</sub>O<sub>5</sub>+3H<sub>2</sub>O→2H<sub>3</sub>PO<sub>4</sub></p>
             </td>
             <td>
-
                 <ul>
                   <li>СП
                     <ul>
@@ -54,11 +53,10 @@
             </td>
 
             <td>
-                <table border="0" cellpadding="0" cellspacing="0" width=100%>
-                       
-<tr><td><!-- День недели/<br>Время суток --></td></td><td><b>Пн</td><td><b>Вт</td><td><b>Ср</td><td><b>Чт</td><td><b>Пт</td></tr>
-<tr><td><b>День</td><td>12</td><td>12</td><td>12</td><td>14</td><td>14</td></tr>
-<tr><td><b>Ночь</td><td>6</td><td>6</td><td>1</td><td>3</td><td>4</td></tr>
+                <table border="0" cellpadding="0" cellspacing="0" width=100%>        
+    <tr><td><!-- День недели/<br>Время сутокsss --></td><td><b>Пн</td><td><b>Вт</td><td><b>Ср</td><td><b>Чт</td><td><b>Пт</td></tr>
+    <tr><td><b>День</td><td>12</td><td>12</td><td>12</td><td>14</td><td>14</td></tr>
+    <tr><td><b>Ночь</td><td>6</td><td>6</td><td>1</td><td>3</td><td>4</td></tr>
 
                 </table>
             </td>
