--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <td>
                 <table border="0" cellpadding="0" cellspacing="0" width=100%>        
-    <tr><td><!-- День недели/<br>Время сутокsss --></td><td><b>Пн</td><td><b>Вт</td><td><b>Ср</td><td><b>Чт</td><td><b>Пт</td></tr>
+    <tr><td><!-- День недели/<br>Время суток --></td><td><b>Пн</td><td><b>Вт</td><td><b>Ср</td><td><b>Чт</td><td><b>Пт</td></tr>
     <tr><td><b>День</td><td>12</td><td>12</td><td>12</td><td>14</td><td>14</td></tr>
     <tr><td><b>Ночь</td><td>6</td><td>6</td><td>1</td><td>3</td><td>4</td></tr>
 
