--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>Internet Технології ЛР1</title>
 </head>
     <body>
@@ -26,8 +27,9 @@
 
         <td width="80%">
             <table border="0" cellpadding="0" cellspacing="0" width=100%>
-            <td><p>Получение <b>ортофосфорной</b> кислоты: <br>P<sub>2</sub>O<sub>5</sub>+3H<sub>2</sub>O→2H<sub>3</sub>PO<sub>4</sub></p>
-            </td>
+            <tr>
+                <td><p>Получение <b>ортофосфорной</b> кислоты: <br>P<sub>2</sub>O<sub>5</sub>+3H<sub>2</sub>O&rarr;2H<sub>3</sub>PO<sub>4</sub></p>
+                </td>
             <td>
                 <ul>
                   <li>СП
@@ -54,13 +56,13 @@
 
             <td>
                 <table border="0" cellpadding="0" cellspacing="0" width=100%>        
-    <tr><td><!-- День недели/<br>Время суток --></td><td><b>Пн</td><td><b>Вт</td><td><b>Ср</td><td><b>Чт</td><td><b>Пт</td></tr>
-    <tr><td><b>День</td><td>12</td><td>12</td><td>12</td><td>14</td><td>14</td></tr>
-    <tr><td><b>Ночь</td><td>6</td><td>6</td><td>1</td><td>3</td><td>4</td></tr>
+    <tr><td><!-- День недели/<br>Время суток --></td><td><b>Пн</b></td><td><b>Вт</b></td><td><b>Ср</b></td><td><b>Чт</b></td><td><b>Пт</b></td></tr>
+    <tr><td><b>День</b></td><td>12</td><td>12</td><td>12</td><td>14</td><td>14</td></tr>
+    <tr><td><b>Ночь</b></td><td>6</td><td>6</td><td>1</td><td>3</td><td>4</td></tr>
 
                 </table>
             </td>
-
+            </tr>
             </table>
 
         </td>
@@ -73,7 +75,7 @@
         </td>
     </tr>
     <tr>
-        <td colspan=3>©Copyright 2021 Igor Ukraintsev. All rights reserved.</td>
+        <td colspan=3> ©wCopyright 2021 Igor Ukraintsev. All rights reserved. </td>
     </tr>
         </table>
     </body>
